Rm useless comments, add opts in Appearance dropdown

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
   <header>
     <div class="header-container">
-      <!-- Выпадающее меню слева -->
       <div class="dropdown-menu">
         <button class="dropbtn">≡</button>
         <div class="dropdown-content">
@@ -31,12 +30,13 @@
         <button type="submit" id="submit-search" style="display: none;">Search</button>
       </div>
 
-      <!-- Кнопка для изменения внешнего вида страницы -->
       <div class="theme-dropdown">
         <button class="dropbtn">🕶</button>
         <div class="dropdown-content">
-          <a href="#">Светлая тема</a>
-          <a href="#">Темная тема</a>
+          <p>Appearance</p>
+          <p>Text</p>
+          <p>Width</p>
+          <p>Color</p>
         </div>
       </div>
 
