Add image and description, add all links

--- a/index.html
+++ b/index.html
@@ -53,21 +53,27 @@
     <article>
       <h2>Заголовок статьи</h2>
       <p>From Wikipedia, the free encyclopedia</p>
-      <p><i>For other uses, see <a href="https://en.wikipedia.org/wiki/Qwerty_(disambiguation)">QWERTY
-            (disambiguation)</a>.
-          Not to be confused with <a href="https://en.wikipedia.org/wiki/QWERTZ">QWERTZ</a> or <a
-            href="https://en.wikipedia.org/wiki/AZERTY">AZERTY</a>.</i></p>
+      <div class="paragraph1">
+        <p><i>For other uses, see <a href="https://en.wikipedia.org/wiki/Qwerty_(disambiguation)">QWERTY
+              (disambiguation)</a>.
+            Not to be confused with <a href="https://en.wikipedia.org/wiki/QWERTZ">QWERTZ</a> or <a
+              href="https://en.wikipedia.org/wiki/AZERTY">AZERTY</a>.</i><br /><br />
 
-      <p>ANSI QWERTY keyboard layout (US)
-        Remington 2 typewriter keyboard, 1878
-        A laptop computer keyboard using the QWERTY layout
-
-        QWERTY is a <a href="#">keyboard layout</a> for <a href="#">Latin-script alphabets</a>. The name comes from the
-        order of
-        the first six <a>keys</a> on the top letter row of the keyboard: <>QWERTY. The QWERTY design is based on a
-          layout
-          included in the Sholes and Glidden typewriter sold via E. Remington and Sons from 1874. QWERTY became popular
-          with the success of the Remington No. 2 of 1878 and remains in ubiquitous use. </p>
+          ANSI QWERTY keyboard layout (US)
+          Remington 2 typewriter keyboard, 1878
+          A laptop computer keyboard using the QWERTY layout
+          QWERTY is a <a href="#">keyboard layout</a> for <a href="#">Latin-script alphabets</a>. The name comes from
+          the order of the first six <a href="#">keys</a> on the top letter row of the keyboard: QWERTY. The QWERTY
+          design is based
+          on a layout included in the Sholes and Glidden typewriter sold via E. Remington and Sons from 1874. QWERTY
+          became
+          popular with the success of the Remington No. 2 of 1878 and remains in ubiquitous use. </p>
+        <div class="image-box"> <img src="https://upload.wikimedia.org/wikipedia/commons/d/da/KB_United_States.svg"
+            alt="QWERTYUIOPASDFGHJKLZXCVBNM" class="article-image">
+          <p><a href="https://en.wikipedia.org/wiki/American_National_Standards_Institute"> ANSI</a> QWERTY <a
+              href="https://en.wikipedia.org/wiki/Keyboard_layout">keyboard layout</a> (US)</a></p>
+        </div>
+      </div>
     </article>
   </main>
   <footer>
