Table and links in end

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <script src="index.js"></script>
   <main>
     <article>
-      <h2>Заголовок статьи</h2>
+      <h2>QWERTY</h2>
       <p>From Wikipedia, the free encyclopedia</p>
       <div class="paragraph1">
         <p><i>For other uses, see <a href="https://en.wikipedia.org/wiki/Qwerty_(disambiguation)">QWERTY
@@ -74,6 +74,74 @@
               href="https://en.wikipedia.org/wiki/Keyboard_layout">keyboard layout</a> (US)</a></p>
         </div>
       </div>
+      <table id="intern-layout-table">
+        <thead>
+          <tr>
+            <th>Spanish label</th>
+            <th>English equivalent</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Insertar (Ins)</td>
+            <td>Insert (Ins)</td>
+          </tr>
+          <tr>
+            <td>Suprimir (Supr)</td>
+            <td>Delete (Del)</td>
+          </tr>
+          <tr>
+            <td>Retroceder página (Re Pág)</td>
+            <td>Page up (PgUp)</td>
+          </tr>
+          <tr>
+            <td>Avanzar página (Av Pág)</td>
+            <td>Page down (PgDn)</td>
+          </tr>
+          <tr>
+            <td>Inicio</td>
+            <td>Home</td>
+          </tr>
+          <tr>
+            <td>Fin</td>
+            <td>End</td>
+          </tr>
+          <tr>
+            <td>Imprimir pantalla / Petición de sistema (Impr Pant/PetSis)</td>
+            <td>Print Screen / System request (PrtScn/SysRq)</td>
+          </tr>
+          <tr>
+            <td>Bloqueo de mayúsculas (Bloq Mayús)</td>
+            <td>Caps Lock</td>
+          </tr>
+          <tr>
+            <td>Bloqueo numérico (Bloq Num)</td>
+            <td>Num Lock</td>
+          </tr>
+          <tr>
+            <td>Bloqueo de desplazamiento (Bloq Despl)</td>
+            <td>Scroll Lock</td>
+          </tr>
+          <tr>
+            <td>Pausa / Interrumpir (Pausa/Inter)</td>
+            <td>Pause/Break</td>
+          </tr>
+          <tr>
+            <td>Intro</td>
+            <td>Enter</td>
+          </tr>
+        </tbody>
+      </table>
+      <h2>External links</h2>
+      <ul>
+        <li>Wikimedia Commons has media related to QWERTY keyboard layouts.</li>
+        <li>Look up QWERTY in Wiktionary, the free dictionary.</li>
+
+        <li>Article on QWERTY and Path Dependence from EH.NET's Encyclopedia</li>
+        <li>QWERTY Keyboard History</li>
+        <li>QWERTY Keyboard in Mobiles</li>
+        <li>Android phones with QWERTY keyboards</li>
+      </ul>
     </article>
   </main>
   <footer>
