Refatrored links in end

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="dropdown-content">
           <p>Main menu</p>
           <ul>
-            <li><a href="#">Main page</a></li>
-            <li><a href="#">Contents</a></li>
-            <li><a href="#">Current events</a></li>
-            <li><a href="#">Random article</a></li>
+            <li><a href="">Main page</a></li>
+            <li><a href="">Contents</a></li>
+            <li><a href="">Current events</a></li>
+            <li><a href="">Random article</a></li>
           </ul>
         </div>
       </div>
@@ -132,15 +132,15 @@
           </tr>
         </tbody>
       </table>
-      <h2>External links</h2>
+      <h3>External links</h3>
       <ul>
-        <li>Wikimedia Commons has media related to QWERTY keyboard layouts.</li>
-        <li>Look up QWERTY in Wiktionary, the free dictionary.</li>
+        <li><a href="">Wikimedia Commons has media related to QWERTY keyboard layouts.</a></li>
+        <li><a href="">Look up QWERTY in Wiktionary, the free dictionary.</a></li>
 
-        <li>Article on QWERTY and Path Dependence from EH.NET's Encyclopedia</li>
-        <li>QWERTY Keyboard History</li>
-        <li>QWERTY Keyboard in Mobiles</li>
-        <li>Android phones with QWERTY keyboards</li>
+        <li><a href="">Article on QWERTY and Path Dependence from EH.NET's Encyclopedia</a></li>
+        <li><a href="">QWERTY Keyboard History</a></li>
+        <li><a href="">QWERTY Keyboard in Mobiles</a></li>
+        <li><a href="">Android phones with QWERTY keyboards</a></li>
       </ul>
     </article>
   </main>
